# udemy-downloader

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  _version.py  coding_assignment_template.html  config.toml  constants.py  dashdownloader.py  dashdownloader_multisegment.py  docker-compose.yml  downloader.py  ffmpeg.py  keyfile.example.json  keyfile.json  main.py  manifest.mpd  pyffmpeg.py  pyproject.toml  quiz_template.html  requirements.txt  sanitize.py  setup.py  test_fetch.py  tls.py  utils.py  vtt_to_srt.py
.github/: FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: stale.yml
templates/: article_template.html  assignment_template.html  quiz_template.html  role_play_template.html
udemy_downloader/: Session.py  Udemy.py  UdemyAuth.py  UdemyDownloader.py  __init__.py  __main__.py  constants.py  main.py  mp4parse.py  sanitize.py  utils.py  version.py  vtt_to_srt.py  widevine_pssh_data_pb2.py  widevine_pssh_pb2.py
udemy_downloader/templates/: article_template.html  coding_assignment_template.html  quiz_template.html
