[tool.poetry]
name = "udemy-downloader"
version = "1.2.0"
description = "A tool for downloading courses from Udemy with Widevine DRM support"
authors = ["Puyodead1 <puyodead@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mpegdash = "^0.4.0"
tqdm = "^4.67.1"
requests = "^2.32.3"
webvtt-py = "^0.5.1"
pysrt = "^1.1.2"
m3u8 = "^6.0.0"
colorama = "^0.4.6"
yt-dlp = "^2024.12.6"
bitstring = "^4.2.3"
unidecode = "^1.3.8"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
six = "^1.17.0"
pathvalidate = "^3.2.1"
coloredlogs = "^15.0.1"
browser-cookie3 = "^0.19.1"
demoji = "^1.1.0"
pywidevine = "^1.8.0"
protobuf = "^4.25.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
udl = "udemy_downloader.main:main"

[tool.isort]
line_length = 118
extend_skip_glob = ["*_pb2.py", "*.pyi"]
